# sw2.5-enemy-editor

./: Cargo.toml  package-lock.json  package.json  webpack.config.js
assets/: index.html
doc/: index.html  main.js
docs/: 1.js  index.html  main.js
src/: editor.rs  enemy.rs  file_loader.rs  lib.rs  print_outer.rs  udonarium.rs  virtual_renderer.rs  write_outer.rs  xml.rs
style/: .gitignore  _color.scss  _font.scss  dialog.scss  editor.scss  file-loader.scss  print-outer.scss  style.scss  write-outer.scss
