[package]
name = "sw25-enemy-editor"
version = "0.1.0"
authors = ["neunyan <soundrabbitstd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 3

[dependencies]
wasm-bindgen = "0.2.55"
serde = "1.0.103"
serde_derive = "1.0.103"
toml = "0.5.5"

[dependencies.kagura]
version = "0.8.3"

[dependencies.web-sys]
version = "0.3.32"
features = [
    "Blob",
    "BlobPropertyBag",
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Url",
    "Window",
]
